[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:tic-tac-toe"
target = "lay3r:avs/task-queue@0.3.0"

[package.metadata.component.dependencies]
